--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native": "^0.63.4",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1"
   }
 }
